--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">MyAndroidArchitecture</string>
+    <string name="error_network_call_failed">network call failed</string>
 </resources>
